--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="flower">
-    <div class="text-above">De Salvador  Guerra</div>
+   
     <div class="mid">
     </div>
     <div class="Petal1 p1">
@@ -37,7 +37,7 @@
     </div>
     <div class="Petal3 p4">
     </div>
-    <div class="text-below">Para Marlene Huezo </div>
+    <div class="text-below">Para Maria Ishi </div>
   </div>
 </body>
 </html>
